create picture export first, video will follow but does not work yet
